Mobile overflow bug fix

--- a/styles.css
+++ b/styles.css
@@ -53,11 +53,11 @@ body {
         color: #00b4d8;
    }
 }
-.cursor{
+.cursor {
     position: relative;
     border-right: 2px solid rgba(255,255,255,.75);
     white-space: nowrap;
-    overflow: hidden;  
+    overflow-x: hidden;  
 }
 .typewriter-animation {
     animation: typewriter 3s steps(25) 1s 1 normal both;
